# ocp-performance-analyzer-mcp

./: .gitignore  README.md  pyproject.toml
analysis/etcd/: __init__.py  etcd_performance_deepdrive.py  etcd_performance_report.py
analysis/utils/: __init__.py  analysis_utility.py
config/: README.md  metrics-alert.yml  metrics-api.yml  metrics-cni.yml  metrics-disk.yml  metrics-etcd.yml  metrics-latency.yml  metrics-net.yml  metrics-node.yml  metrics-ovn.yml  metrics-ovs.yml  metrics-pods.yml  metrics_config_reader.py  test_metrics_loading.py
elt/: __init__.py
elt/disk/: analyzer_elt_disk_io.py
elt/etcd/: __init__.py  analyzer_elt_backend_commit.py  analyzer_elt_bottleneck_analysis.py  analyzer_elt_cluster_status.py  analyzer_elt_compact_defrag.py  analyzer_elt_general_info.py  analyzer_elt_performance_deep_drive.py  analyzer_elt_wal_fsync.py  etcd_analyzer_elt_bottleneck.py  etcd_analyzer_elt_deep_drive.py  etcd_analyzer_performance_elt_report.py
elt/net/: __init__.py  analyzer_elt_network_io.py  analyzer_elt_network_l1.py  analyzer_elt_network_netstat4tcp.py  analyzer_elt_network_netstat4udp.py  analyzer_elt_network_socket4ip.py  analyzer_elt_network_socket4mem.py  analyzer_elt_network_socket4softnet.py  analyzer_elt_network_socket4tcp.py  analyzer_elt_network_socket4udp.py
elt/node/: analyzer_elt_node_health.py  analyzer_elt_node_kubelet_runtime_operations_errors.py  analyzer_elt_node_pleg_relist.py  analyzer_elt_node_usage.py
elt/ocp/: analyzer_elt_cluster_alert.py  analyzer_elt_cluster_apistats.py  analyzer_elt_cluster_info.py
elt/ovnk/: analyzer_elt_deepdrive.py  analyzer_elt_kubelet_cni.py  analyzer_elt_latency.py  analyzer_elt_ovs.py
elt/utils/: README.md  analyzer_elt_json2table.py  analyzer_elt_utility.py
mcp/etcd/: .env.example  .gitignore  README.md  etcd_analyzer_client_chat.py  etcd_analyzer_command.sh  etcd_analyzer_mcp_agent_report.py  etcd_analyzer_mcp_agent_stor2db.py  etcd_analyzer_mcp_server.py  pyproject.toml
mcp/mcp_tools/: __init__.py  api_server.py  backend_commit.py  bottleneck_analysis.py  cluster_info.py  cluster_status.py  compact_defrag.py  disk_io.py  etcd_performance_deep_drive.py  etcd_performance_report.py  general_info.py  health_check.py  kubelet_cni.py  models.py  multus_pods_usage.py  netstat_tcp.py  netstat_udp.py  network_io.py  network_l1.py  node_kubelet_runtime_operations_errors.py  node_pleg_relist.py  node_usage.py  ovn_database.py  ovn_latency.py  ovnk_pods_usage.py  ovs_usage.py  socket_ip.py  socket_memory.py  socket_softnet.py  socket_tcp.py  socket_udp.py  utils.py  wal_fsync.py
mcp/net/: network_analyzer_client_chat.py  network_analyzer_mcp_command.sh  network_analyzer_mcp_server.py
mcp/node/: node_analyzer_client_chat.py  node_analyzer_mcp_server.py
mcp/ovnk/: README.md  ovnk_analyzer_mcp_client_chat.py  ovnk_analyzer_mcp_server.py
ocauth/: openshift_auth.py
storage/etcd/: __init__.py  analyzer_stor_backend_commit.py  analyzer_stor_cluster_info.py  analyzer_stor_compact_defrag.py  analyzer_stor_disk_io.py  analyzer_stor_disk_wal_fsync.py  analyzer_stor_general_info.py  analyzer_stor_network_io.py  analyzer_stor_utility.py
tools/disk/: disk_io.py
tools/etcd/: etcd_cluster_status.py  etcd_disk_backend_commit.py  etcd_disk_compact_defrag.py  etcd_disk_wal_fsync.py  etcd_general_info.py
tools/net/: network_io.py  network_l1.py  network_netstat4tcp.py  network_netstat4udp.py  network_socket4ip.py  network_socket4mem.py  network_socket4softnet.py  network_socket4tcp.py  network_socket4udp.py
tools/node/: node_kubelet_runtime_operations_errors.py  node_pleg_relist.py  node_usage.py
tools/ocp/: cluster_alert.py  cluster_apistats.py  cluster_info.py
tools/ovnk/: ovnk_baseinfo.py  ovnk_kubelet_cni.py  ovnk_latency.py  ovnk_ovs_usage.py
tools/utils/: promql_basequery.py  promql_utility.py
webroot/etcd/: etcd_analyzer_mcp_llm.html
webroot/net/: network_analyzer_mcp_llm.html
webroot/node/: node_analyzer_mcp_llm.html
webroot/ovnk/: ovnk_analyzer_mcp_llm.html
