[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-etcd-analyzer-mcp"
version = "1.0.0"
description = "MCP Server for OpenShift etcd cluster monitoring and analysis"
authors = [
    {name = "OpenShift etcd Analyzer", email = "admin@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    # LangGraph and LangChain - Latest versions >=0.3
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    
    # FastAPI and async support  
    "fastapi>=0.115.7",
    "uvicorn[standard]>=0.30.0",
    
    # MCP client support
    "fastmcp>=1.12.4",
    "mcp>=1.0.0",
    
    # Database and storage
    "duckdb>=1.0.0",
    
    # HTTP client support
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    
    # Data processing
    "pydantic>=2.8.0",
    "typing-extensions>=4.12.0",
    
    # Kubernetes client (for OCP integration)
    "kubernetes>=30.1.0",
    
    # Logging and utilities
    "structlog>=24.0.0",    
    "asyncio>=3.4.1",
    "fastapi>=0.115.7",
    "fastmcp>=1.12.4",
    "langgraph>=0.3",
    "langchain>=0.3",
    "kubernetes>=29.0.0",
    "prometheus-api-client>=0.5.3",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.8.0",
    "uvicorn>=0.20.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "langchain-openai",
    "httpx",
    "tabulate"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
ocp-etcd-mcp = "ocp_etcd_analyzer_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true